--- a/ParkManagerService.yaml
+++ b/ParkManagerService.yaml
@@ -6,6 +6,8 @@ services:
     ports:
       - 8050:8050
     network_mode: host
+    extra_hosts:
+      - "sensors.local:192.168.1.217"
   webapp:
     image: docker.io/giuliotripi/parkmanagerservice-webapp:github-1.0
     ##image: basicrobot21virtual:1.0
