--- a/ParkManagerService.yaml
+++ b/ParkManagerService.yaml
@@ -4,7 +4,7 @@ services:
     image: docker.io/giuliotripi/parkmanagerservice:github-1.0
     network_mode: host
     extra_hosts:
-      - "sensors.local:192.168.1.217"
+      - "sensor.local:192.168.1.217"
       - "basicrobot.local:127.0.0.1"
   webapp:
     image: docker.io/giuliotripi/parkmanagerservice-webapp:github-1.0
